eventcore-macros/tests/ui/tuple_struct.stderr
error: EventCore: #[derive(Command)] currently supports structs with named fields
 --> tests/ui/tuple_struct.rs:5:8
  |
5 | struct TupleCommand(#[stream] StreamId);
  |        ^^^^^^^^^^^^
